# WinsockApplication

./: .gitignore  CMakeLists.txt  README.md  Winsock_Project.sln  client.cpp  server.cpp
Winsock_Project/: Winsock_Project.vcxproj  Winsock_Project.vcxproj.filters
